Changed forecast graph height to be specific to the combined forecast graph height. This stops the tide graph overflowing over the weather data and allows for text highlighting/proper selection.

--- a/app/javascript/styles/application/organisms/_forecast-graph.scss
+++ b/app/javascript/styles/application/organisms/_forecast-graph.scss
@@ -25,11 +25,16 @@ $forecast-graph-width: 960px;
     width: 100%;
   }
 
+  &.forecast-graph-combined {
+    .forecast-graph {
+      height: 225px;
+    }
+  }
+
   .forecast-graph {
     position: relative;
     display: block;
     width: $forecast-graph-width;
-    height: 225px;
 
     @include breakpoint(large) {
       width: 100%;
